🐛 fix(Card.jsx): fix import statement to use single quotes for consistency 🎨 style(Projects.module.scss): add justify-content: center to projects container for better alignment 🎨 style(Projects.module.scss): adjust margin for projects button for better spacing 🎨 style(Projects.module.scss): add padding-bottom to projects container for better spacing on tablet screens 🎨 style(Projects.module.scss): add padding-top and padding-bottom to projects container for better spacing on mobile screens 🎨 style(Projects.module.scss): adjust width and max-width of projects line for better responsiveness on tablet screens

--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -54,6 +54,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
+    justify-content: center;
   }
 
   &__button {
@@ -62,7 +63,7 @@
     justify-content: center;
     width: fit-content;
     height: 48px;
-    margin: 48px auto 0;
+    margin: 48px 0;
     padding: 25px;
     color: var(--white-color);
     font-weight: 500;
@@ -86,22 +87,30 @@ $breakpoint-mobile: 426px;
 
 @media screen and (max-width: $breakpoint-tablet) {
   .projects {
+    padding-bottom: 32px;
+
     &__container {
-      flex-direction: column;
-      gap: 16px;
-      align-items: flex-start;
+      align-items: center;
     }
 
     &__line {
-      width: 239px;
+      width: 100%;
+      max-width: 200px;
     }
   }
 }
 
 @media screen and (max-width: $breakpoint-mobile) {
   .projects {
+    padding-top: 48px;
+    padding-bottom: 32px;
+
     &__line {
       display: none;
+    }
+
+    &__button {
+      margin-top: 32px;
     }
   }
 }
